[tool.poetry]
name = "reactivestate"
version = "0.1.0"
description = "Simple, scalable state management for Python."
authors = ["K. Groenbroek <kasper.groenbroek@ortec.com>"]

[tool.poetry.dependencies]
python = "^3.7"
blinker = "^1.4"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
